# nhl-intel

./: .env.example  .gitignore  Dockerfile  Makefile  PRODUCT_OVERVIEW.md  README.md  Trades 2015-2026.csv  backfill_historical.py  check_taylor_hall.py  contracts - rfas.csv  contracts.csv  deduplicate_raw_tables.py  docker-compose.yml  gm_tenures.csv  load_schedule_only.py  monitor_backfill.sh  populate_raw_games.py  pytest.ini  recover_vm.sh  requirements.txt  responsibility-map-schemes.html  serving_tables.yml  setup_gcs_bucket.py  start_airflow.sh  startup.md  test_end_to_end.py  test_llm.py  test_query.py  test_report.py  trigger_full_backfill.sh
archive/: README.md
backend/: .env.example  .gcloudignore  API_EXPANSION_SUMMARY.md  Dockerfile  README.md  main.py  requirements.txt  validate_trade_engine.py
dags/: nhl_daily.py  nhl_historical_backfill.py  offseason_forecast_intraday.py
dbt/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
docs/: HANDOFF-1-network-and-ingestion.md  HANDOFF-2-bigquery-nhl-models.md  HANDOFF-3-ml-runbook.md  HANDOFF-4-archetype-naming.md  PHASE0_FINDINGS.md  PHASE6_FINDINGS.md  SESSION-STATE.md  player-assessment-spec.md  shift-fallback-ingestion-report.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ingestion/: backfill_coach_loader.py  loaders.py  nhl_api.py  shift_report_parser.py
insight_engine/: README.md
instructions/: 00-DESIGN-SYSTEM.md  00b-well-amendment.md  00c-amendment-approved-home.md  01-games-v3-approved.md  02-game-detail-v2-approved.md  06-team-profile-v2-approved.md  07-players-v3-approved.md  08-player-profile-v2-approved.md  10-offseason-v2-approved.md  11-lineup-lab-v2-approved.md  12-player-fit-v2-approved.md  13-trade-builder-v2-approved.md  14-contract-grader-v2-approved.md  16-draft-value-v2-approved.md  19-home-v3-approved.md  README.md
models_ml/: README.md  analyze_combined_validation.py  analyze_goalie_clutch.py  analyze_goalie_clutch_impact.py  analyze_kitchen_sink.py  analyze_kitchen_sink_v2.py  analyze_noise_demo.py  analyze_playoff_components.py  analyze_playoff_experience.py  analyze_playoff_profile.py  analyze_series_features.py  analyze_series_model.py  archetype_features.py  archetype_features_v2.py  baselines.py  bq.py  build_playoff_weights.py  build_verdict_payload.py  calibrate_roster_builder.py  compute_archetype_explainer.py  compute_assessment.py  compute_clutch.py  compute_coach_trust.py  compute_composite.py  compute_consistency.py  compute_contract_value.py  compute_deployment_efficiency.py  compute_divergence.py  compute_futures_value.py  compute_gar.py  compute_goalie_gar.py  compute_goalie_radar.py  compute_overall.py  compute_physical.py  compute_player_radar.py  compute_prior_quality.py  compute_pwar.py  compute_ratings.py  compute_style_map.py  (+40 more)
research/chemistry/: .gitignore  Makefile  README.md  pyproject.toml
research/chemistry/reports/: phase0.md  phase1.md  phase2.md  upstream-ledger.md
research/chemistry/src/chem/: config.py  corpus.py  nullmodel.py  phase0.py  phase1.py  phase2.py
research/chemistry/tests/: test_phase0.py  test_phase1.py  test_phase2.py
research/composition-probe/: Makefile  pyproject.toml
research/composition-probe/reports/: FINDINGS.md  probe.md
research/composition-probe/src/comppro/: __init__.py  config.py  gate.py  styles.py
research/composition-probe/tests/: test_comppro.py
research/dependency-probe/: .gitignore  Makefile  pyproject.toml
research/dependency-probe/reports/: FINDINGS.md  probe.md
research/dependency-probe/src/deppro/: __init__.py  behavior.py  config.py  linkA.py  linkB.py  linkQ.py  q3unit.py  qaxes.py
research/dependency-probe/tests/: test_deppro.py
research/deployment-atlas/: .gitignore  Makefile  README.md  pyproject.toml  xg_refit.py
research/deployment-atlas/reports/: FINDINGS.md  phase0.md  phase1-inventory.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5-robustness.md  phase5.md  upstream-ledger.md
research/deployment-atlas/src/atlas/: __init__.py  api.py  backfill_shifts.py  client.py  config.py  context.py  fetch.py  integrity.py  manifest.py  parse.py  paths.py  phase0.py  phase1.py  phase3.py  phase5.py  pipeline.py  probe.py  rapm.py  reports.py  shift_report.py  sources.py  stint_tests.py  stints.py
research/deployment-atlas/tests/: conftest.py  test_client.py  test_manifest.py  test_parse.py  test_paths.py  test_stints.py
research/role-fit-probe/: .gitignore  Makefile  pyproject.toml
research/role-fit-probe/reports/: probe.md  upstream-ledger.md
research/role-fit-probe/src/rolefit/: __init__.py  config.py  enrich.py  link1.py  link1_rich.py  link2.py  profiles.py  step0.py  step0b.py  units.py
research/role-fit-probe/tests/: test_rolefit.py
research/system-effects/: .gitignore  Makefile  README.md  pyproject.toml
research/system-effects/reports/: FINDINGS.md  phase0.md  phase1.md  phase2-addendum.md  phase2.md  phase3.md  phase4.md  phase5-jolt-addendum.md  phase5-summer-addendum.md  phase5.md  phase6.md  registration_2027.md  registration_jolt.md  upstream-ledger.md
research/system-effects/src/syseff/: api.py  backfill_rightrail.py  config.py  context.py  design_a.py  design_b.py  fingerprints.py  jolt.py  opponent.py  phase1.py  phase2.py  phase2_addendum.py  phase3.py  phase4.py  phase5.py  player_types.py  portability.py  probe_rightrail.py  prospective.py  regime_ledger.py  sequence.py  stability.py  summer.py  team_season.py
research/system-effects/tests/: test_jolt.py  test_phase3.py  test_phase4.py  test_phase5.py  test_regime_ledger.py  test_summer.py
(+899 files in other folders)
