[project]
name = "chemistry"
version = "0.1.0"
description = "NHL pair chemistry: pair over/under-performance beyond individual quality as a persistent trait, and player fit embeddings, validated predictively on unseen pairs. Isolated research layer; production is read-only."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.3",
    "httpx>=0.27",   # transitive requirement of atlas.api's import chain (parquet reads use polars directly)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# torch is permitted for the embedding fit ONLY if scikit alternatives prove inadequate;
# its use must be justified in the phase report before it is added here.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Self-contained test discovery: the repo-root pytest.ini uses testpaths=tests, so root CI
# never recurses into research/. This keeps `pytest` inside chemistry/ isolated to this
# project's own tests + src.
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
