[project]
name = "dependency-probe"
version = "0.1.0"
description = "Gated feasibility probe: does a player change his BEHAVIOR by teammate (Link A), is that dependence a stable individual trait (Link B), and does dependence on a departing teammate predict his change (Link C)? A different angle on fit than the killed output-based arcs (F17 pair residual, F18 unit over-performance). Frozen/already-ingested-read corpus; isolated; nothing promoted."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
