[project]
name = "deployment-atlas"
version = "0.1.0"
description = "NHL shift-chart & play-by-play research pipeline: on-ice reconstruction, context-corrected ratings, coach deployment fingerprints."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
