[project]
name = "role-fit-probe"
version = "0.1.0"
description = "Two-link feasibility probe of the role-composition theory of fit. Does a stable player role/action proxy exist (L1), and do units over-perform their parts within a season (L2)? Frozen-corpus probe; isolated research layer; nothing promoted or published."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.3",
    "httpx>=0.27",   # transitive requirement of atlas.api's import chain (parquet reads use polars directly)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Self-contained test discovery (repo-root pytest.ini uses testpaths=tests, so root CI never recurses
# into research/). Keeps `pytest` inside role-fit-probe/ isolated to this probe's own tests + src.
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
