[project]
name = "system-effects"
version = "0.1.0"
description = "NHL coaching-system effects: per-player portability scores and per-matchup style adjustments, validated predictively. Isolated research layer; production is read-only."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Self-contained test discovery: mirrors deployment-atlas. The repo-root pytest.ini
# uses testpaths=tests, so root CI never recurses into research/. This block keeps
# `pytest` inside system-effects/ isolated to this project's own tests + src.
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
